# hyprgui

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.sh  hyprgui.desktop  readme.md
.github/workflows/: typos.yml
src/: gui.rs  main.rs  modules.rs  widgets.rs
