[package]
name = "hyprgui"
version = "0.1.7"
authors = ["Firstpick <firstpick1992@proton.me>"]
license = "GPL-2.0"
description = "GUI for configuring Hyprland."
repository = "https://github.com/Firstp1ck/hyprgui.git"
readme = "README.md"
keywords = [
    "gui",
    "hyprland",
    "wayland",
    "config",
]
categories = ["gui"]
edition = "2024"

[dependencies]
gtk = { version = "0.9.2", package = "gtk4" }
hyprparser = "0.1.6"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
